--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <hr>
         <div class="row text-center">
             <div class="col-md-12">
-                <p>Copyright &copy; 2021 <a href="https://t.me/islombekNv">Developer Normamatov Islombek</a> | <a href="https://www.ba.uz">Bobir Akilkhanov tech academy</a></p>
+                <p>2021 | Created By:<a href="https://t.me/islombekNv">Developer Normamatov Islombek</a> | <a href="https://www.ba.uz">Bobir Akilkhanov tech academy</a></p>
             </div>
         </div>
     </div>
